# wisp-science

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  README_zh.md  design-qa.md  pixi.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/release-notes/: v0.1.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.16.1.md  v0.16.2.md  v0.19.0.md  v0.2.0.md  v0.20.0.md  v0.3.2.md  v0.4.0.md  v0.4.2.md  v0.5.1.md  v0.5.3.md  v0.6.0.md  v0.9.0.md
.github/workflows/: build-macos.yml  build-windows.yml  release-macos.yml  release-windows.yml  release.yml  server-container.yml  test.yml
crates/wisp-core/: Cargo.toml
crates/wisp-server/: Cargo.toml
crates/wisp-server/src/: lib.rs  main.rs
crates/wisp-store/: Cargo.toml
deploy/: .env.example  Caddyfile  docker-compose.yml
docs/: acp-agents.html  acp-agents.md  agent-delegation.md  channels.md  feature-plugins.md  global-library.md  index.html  model-configuration.html  model-configuration.md  pet.md  project-sync.md  project-sync.zh-CN.md  project-transfer.md  qingxiaoda-deployment.md  real-browser-automation.md  remote-file-browser.md  server-transfers.md  terminal-sessions.md
python/: kernel_worker.py  mcp_domain_smoke.py  test_kernel_worker.py
skills/: THIRD_PARTY_LICENSES.md
src-tauri/: Cargo.toml  gen-icons.ps1  tauri.conf.json  tauri.macos.conf.json
ui/: Cargo.toml  Trunk.toml  build.ps1  dev.ps1  fonts.css  index.html  mock-bridge.js  preview.html  styles.css  sync-vendor.mjs  sync-vendor.ps1
ui-tests/: package-lock.json  package.json  playwright.config.ts
(+212 files in other folders)
